# btc-curate-assistant

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
config/examples/: .env.example
docs/architecture/: coding-agents.md  manual-smoke-tests.md  repo-structure.md
docs/curate/: dash-curation-venv-uv.md  overview.md
docs/fetch/: ncbi-cloud-delivery.md  overview.md
manifests/bioprojects/: default.json
scripts/: pull_gbm_mongo.py
scripts/fetch/: cat_gsm_fastqs.sh  create_s3_bioproject_prefixes.sh  fetch_bioprojects_to_s3.sh  fetch_from_manifest.sh  generate_bioproject_manifest.sh  remap_bam_to_reference.sh  test_bam.sh
src/btc/: __init__.py  cli.py
src/btc/common/: __init__.py  aws.py  config.py
src/btc/curate/: __init__.py  cli.py  inventory.py  manifests.py  mongo_exports.py  plans.py
src/btc/curate/modalities/: gbm_tracker.py  sharma.py  white_proteomics.py
src/btc/curate/scripts/: pull_gbm_mongo.py  rename_s3_parentheses.py
src/btc/fetch/: __init__.py  bioproject.py  cli.py
src/btc_manifest/: __init__.py  aws.py  cli.py  config.py  inventory.py  manifests.py  mongo_exports.py  plans.py  references.py  templates.py
src/btc_manifest/modalities/: __init__.py  sharma.py  white_proteomics.py
src/btc_manifest/scripts/: pull_gbm_mongo.py  rename_s3_parentheses.py
templates/: .~lock.template_file_04132026.xlsx#  template_biospecimen_04132026.xlsx  template_biospecimenfile_04132026.xlsx  template_subject_04132026.xlsx
templates/manifests/: template_file_04132026.xlsx
tools/: btc-curate-assistant.md
