[project]
name = "btc-curate-assistant"
version = "0.1.0"
description = "Metadata curation assistant CLI for the BTC project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
btc-curate-assistant = "btc_manifest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btc_manifest"]

[tool.uv]
package = false
