[project]
name = "btc-curate-assistant"
version = "0.1.0"
description = "Metadata curation assistant CLI for the BTC project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
curate = "btc_manifest.cli:main"
btc-curate-assistant = "btc_manifest.cli:main"
pull-gbm-mongo = "btc_manifest.scripts.pull_gbm_mongo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btc_manifest"]
