[project]
name = "btc-curate-assistant"
version = "0.1.0"
description = "BTC curation and data-ops toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
btc = "btc.cli:main"
curate = "btc.curate.cli:main"
btc-curate-assistant = "btc.curate.cli:main"
pull-gbm-mongo = "btc.curate.scripts.pull_gbm_mongo:main"
rename = "btc.curate.scripts.rename_s3_parentheses:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btc"]
